--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Drivon</string>
-    <string name="welcome">"Welcom back "</string>
+    <string name="welcome">"Welcome Back "</string>
     <string name="text_user_email">Email</string>
     <string name="text_password">Password</string>
     <string name="dont">Don\'t have an account? Create Now</string>
